# compute_rep

./: .clang-format  .clangd  CMakeLists.txt  README.md  cuda.cu
rng/: rng.cpp  rng.hpp
tasks/: CMakeLists.txt
tasks/1_gelu_omp/: 1_gelu_omp.cpp  gelu_omp.cpp  gelu_omp.h
tasks/2_gelu_cuda/: 2_gelu_cuda.cpp  gelu_cuda.cu  gelu_cuda.h
tasks/3_naive_gemm_omp/: 3_naive_gemm_omp.cpp  naive_gemm_omp.cpp  naive_gemm_omp.h
tasks/4_naive_gemm_cuda/: 4_naive_gemm_cuda.cpp  naive_gemm_cuda.cu  naive_gemm_cuda.h
tasks/5_block_gemm_omp/: 5_block_gemm_omp.cpp  block_gemm_omp.cpp  block_gemm_omp.h
tasks/6_block_gemm_cuda/: 6_block_gemm_cuda.cpp  block_gemm_cuda.cu  block_gemm_cuda.h
tasks/7_gemm_cublas/: 7_gemm_cublas.cpp  gemm_cublas.cu  gemm_cublas.h
tasks/8_fft_cufft/: 8_fft_cufft.cpp  fft_cufft.cu  fft_cufft.h
tasks/9_gelu_ocl/: 9_gelu_ocl.cpp  gelu_ocl.cpp  gelu_ocl.h
tests/: CMakeLists.txt
tests/1_gelu_omp/: gelu_omp.cpp
tests/2_gelu_cuda/: gelu_cuda.cpp
tests/3_naive_gemm_omp/: naive_gemm_omp.cpp
tests/4_naive_gemm_cuda/: naive_gemm_cuda.cpp
tests/5_block_gemm_omp/: block_gemm_omp.cpp
tests/6_block_gemm_cuda/: block_gemm_cuda.cpp
tests/7_block_cublas/: 7_block_cublas.cpp  main.cpp
tests/7_gemm_cublas/: 7_gemm_cublas.cpp
tests/8_ffr_cufft/: 8_ffr_cufft.cpp
tests/9_gelu_ocl/: 9_gelu_ocl.cpp
